# cota

./: .gitignore  README.md  pyproject.toml
bots/simplebot/: agent.yml  endpoints.yml.example
bots/taskbot/: endpoints.yml.example
bots/taskbot/agents/agent01/: agent.yml
bots/taskbot/agents/agent02/: agent.yml  endpoints.yml.example
cota/: __init__.py  __main__.py  agent.py  constant.py  dst.py  llm.py  processor.py  task.py
cota/actions/: bot_utter.py  form.py  rag.py  selector.py  user_utter.py
cota/bots/simplebot/: agent.yml
cota/dpl/: dpl.py  rag.py
cota/llm/: base.py  custom.py  llm.py  openai.py
docs/: book.toml
docs/src/: README.md  SUMMARY.md  test-mermaid.md
docs/src/architecture/: components.md  data-flow.md  design-principles.md  overview.md
docs/src/concepts/: dpl.md  task.md
docs/src/configuration/: agent.md  endpoints.md  overview.md  policy.md  trigger.md
docs/src/deployment/: troubleshooting.md
docs/src/tutorial/: quick_start.md
docs/theme/: custom.css  custom.js
tests/: test_llm.py
