[tool.poetry]
name = "cota"
version = "0.1.0"
description = ""
authors = ["MingGuangShao <690714362@qq.com>"]

[tool.poetry.dependencies]
python = ">=3.12"
numpy = "^1.21.4"
protobuf = "^4.22.1"
cpm-kernels = "^1.0.11"
openai = ">=1.31.1"
pytest = "^7.3.1"
sanic = "~23.12"
sanic-cors = "~2.0.0"
sanic-jwt = "^1.6.0"
sanic-routing = ">=23.12.0"
websockets = ">=10.0,<11.0"
aiohttp = "^3.9"
questionary = ">=1.5.1,<1.11.0"
python-socketio = ">=4.4,<6"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.22"
dashscope = ">=1.20.0"
setuptools = "^70.1.1"
pyyaml = "^6.0.1"
pymysql = "^1.1.1"
faiss-cpu = "^1.8.0.post1"
asyncio = "^3.4.3"
[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
cota = "cota.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple"
priority = "default"
